--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,4 +123,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    debugImplementation 'com.github.brunogabriel.mockp-interceptor:library:0.0.1'
+
 }
